[Mac] Leak: dispatch_semaphore leak allocated in MediaPlayerPrivateAVFoundationObjC::waitForVideoOutputMediaDataWillChange https://bugs.webkit.org/show_bug.cgi?id=129792

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-03-06
Reviewed by Anders Carlsson.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::~MediaPlayerPrivateAVFoundationObjC):

Canonical link: https://commits.webkit.org/147838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165195 268f45cc-cd09-0410-ab3c-d52691b4dbfc